[gd_scene load_steps=44 format=2]

[ext_resource path="res://Data/Fonts/fontTimes-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Data/Fonts/fontRobotoLight.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Objects/Effects/fxGrain.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/scrMenu.gd" type="Script" id=4]
[ext_resource path="res://Sounds/BGS/bgsVynil.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sounds/SFX/sfxButton.ogg" type="AudioStream" id=6]
[ext_resource path="res://Objects/Effects/fxDithering.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sprites/Splash/sprAhopness/0013.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Splash/sprAhopness/0082.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Splash/sprAhopness/0014.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Splash/sprAhopness/0011.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Splash/sprAhopness/0016.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Splash/sprAhopness/0019.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Splash/sprAhopness/0012.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Splash/sprAhopness/0010.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Splash/sprAhopness/0020.png" type="Texture" id=17]
[ext_resource path="res://Sprites/UI/aprSav.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Splash/sprAhopness/0009.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Splash/sprAhopness/0008.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Splash/sprAhopness/0015.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Splash/sprAhopness/0021.png" type="Texture" id=22]
[ext_resource path="res://Sounds/MUS/musAveMaria.ogg" type="AudioStream" id=23]
[ext_resource path="res://Sprites/Splash/sprAhopness/0079.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Splash/sprAhopness/0081.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Splash/sprAhopness/0083.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Splash/sprAhopness/0084.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Splash/sprAhopness/0085.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Splash/sprAhopness/0088.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Splash/sprAhopness/0017.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Splash/sprAhopness/0080.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Splash/sprAhopness/0086.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Splash/sprAhopness/0089.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Splash/sprAhopness/0087.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Splash/sprAhopness/0018.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Menu/sprTwitter.png" type="Texture" id=37]

[sub_resource type="DynamicFont" id=1]
size = 27
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 75, 25 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 21 ), ExtResource( 13 ), ExtResource( 31 ), ExtResource( 36 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 22 ), ExtResource( 25 ), ExtResource( 32 ), ExtResource( 26 ), ExtResource( 10 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 30 ), ExtResource( 34 ), ExtResource( 20 ) ],
"loop": false,
"name": "anmAhop",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 21, 21 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 180, 320 )

[sub_resource type="Animation" id=8]
length = 17.0
tracks/0/type = "value"
tracks/0/path = NodePath("txtTitle:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 11.5, 13.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("txtTitle:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 15, 16 ),
"transitions": PoolRealArray( 1, 0.4, 1 ),
"update": 0,
"values": [ Vector2( 0, 320 ), Vector2( 0, 320 ), Vector2( 0, 32 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("txtInfo1:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 6.6, 7.1, 9.5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 6.9, 17 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "prank"
}, {
"args": [  ],
"method": "activate_touch"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Play:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 15.5, 16.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("txtInfo2:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 6.6, 7.1, 9.5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("txtInfo0:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 4, 4.5, 6.1, 6.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Logo/spranmAhopness:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5, 1.1, 2.6, 3 ),
"transitions": PoolRealArray( 1, 0.4, 1, 1.4, 1 ),
"update": 0,
"values": [ 0, 0, 13, 13, 25 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Logo/spranmAhopness:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/9/type = "method"
tracks/9/path = NodePath("musAveMaria")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 11.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("txtVersion:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 16, 16.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("sprTwitter:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 16, 16.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("sprTwitter/btnTwitter:shape")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 16.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ null, SubResource( 6 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("btnSkip:shape")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 16.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ SubResource( 7 ), null ]
}

[node name="scnMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clrBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtTitle" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
margin_top = 320.0
margin_bottom = 358.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "GIFT"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtInfo0" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -10.0
margin_bottom = 14.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "&menu4"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="txtInfo0"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = 19.0
margin_right = 20.0
margin_bottom = 59.0
texture = ExtResource( 18 )
expand = true

[node name="txtInfo1" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -80.0
margin_bottom = -47.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "&menu5"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtInfo2" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 48.0
margin_bottom = 81.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "&menu6"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtVersion" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -152.0
margin_top = -33.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.462745, 0.462745, 0.462745, 1 )
text = "v1.0.823543"
align = 2
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtPlay" type="Label" parent="Play"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -16.5
margin_right = 76.0
margin_bottom = 16.5
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "&menu1"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnPlay" type="TouchScreenButton" parent="Play/txtPlay"]
position = Vector2( 78, 16 )
shape = SubResource( 4 )
shape_centered = false

[node name="txtContinue" type="Label" parent="Play"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = -16.5
margin_right = -4.0
margin_bottom = 16.5
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "&menu2"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnContinue" type="TouchScreenButton" parent="Play/txtContinue"]
position = Vector2( 78, 16 )
shape = SubResource( 4 )
shape_centered = false

[node name="txtNewGame" type="Label" parent="Play"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 6.0
margin_top = -16.5
margin_right = 158.0
margin_bottom = 16.5
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "&menu3"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnNewGame" type="TouchScreenButton" parent="Play/txtNewGame"]
position = Vector2( 78, 16 )
shape = SubResource( 4 )
shape_centered = false

[node name="Logo" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spranmAhopness" type="AnimatedSprite" parent="Logo"]
position = Vector2( 24, 10 )
frames = SubResource( 5 )
animation = "anmAhop"

[node name="sprTwitter" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -42.0
margin_right = 42.0
texture = ExtResource( 37 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnTwitter" type="TouchScreenButton" parent="sprTwitter"]
shape = SubResource( 6 )

[node name="sprGrain" parent="." instance=ExtResource( 3 )]

[node name="fxDithering" parent="." instance=ExtResource( 7 )]
margin_left = 0.0
margin_right = 0.0

[node name="btnSkip" type="TouchScreenButton" parent="."]
shape = SubResource( 7 )

[node name="anmMain" type="AnimationPlayer" parent="."]
autoplay = "anmInit"
anims/anmInit = SubResource( 8 )

[node name="bgsVynil" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true
bus = "BGS"

[node name="sfxButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="musAveMaria" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = 1.0
bus = "MUS"

[connection signal="released" from="Play/txtPlay/btnPlay" to="." method="_on_btnPlay_released"]
[connection signal="released" from="Play/txtContinue/btnContinue" to="." method="_on_btnContinue_released"]
[connection signal="released" from="Play/txtNewGame/btnNewGame" to="." method="_on_btnNewGame_released"]
[connection signal="released" from="sprTwitter/btnTwitter" to="." method="_on_btnTwitter_released"]
[connection signal="released" from="btnSkip" to="." method="_on_btnSkip_released"]
